# okada_deform

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  cMakefile  run.sh
demo/: linux_execution.webm
include/: Env.h  Timer.h  cuda_common.h  geo.h  globals.h  grid.h  okada85.h  okada85cpu.h  okada85gpu.cuh
samples/: README.md  averroes.txt  chile_1960.txt  chile_1960_allpacific_15sec.txt  chile_1960_allpacific_30sec.txt  chile_1960_time.txt  ecuador.txt  huge_grid_1.txt  marianas.txt  multiple_faults_1.txt  multiple_faults_2.txt  test.txt  thousand_faults.txt  tonga.txt
shapes/: README.md  fault_ecuador.shp  fault_ecuador.shx
src/: grid.cpp  main.cpp  okada85cpu.cpp  okada85gpu.cu
